# deep_learning_gen_ai

./: Notebook_00a-ML Recap - Part 1.ipynb  Notebook_00b-NLP Recap - Part 2.ipynb  Notebook_02.ipynb  Notebook_03.ipynb  Notebook_05.ipynb  Notebook_06.ipynb  Notebook_07.ipynb  Notebook_08.ipynb  Notebook_09.ipynb  Notebook_10.ipynb  Notebook_11.ipynb  Notebook_12.ipynb  README.md  download_datasets_and_binaries.sh  pyproject.toml
.devcontainer/: devcontainer.json
